--- a/Web Crawling.ipynb
+++ b/Web Crawling.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# set the base URL and the search term\n",
-    "search_term = 'clothes'#spanner,hammer,screwdriver\n",
+    "search_term = 'spanner'#clothes,hammer,screwdriver\n",
     "directory = \"E:/internships/Enord/photos/clothes\"\n",
     "#url=f\"https://www.shutterstock.com/search/{search_term}?page=800\"\n",
     "#url= f\"https://www.gettyimages.in/search/2/image?family=creative&phrase={search_term}\"\n",
